manifests/dsmr-reader/manifest.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dsmr-reader-postgresql
  namespace: home-automation
  labels:
    app.kubernetes.io/name: dsmr-reader
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: dsmr-reader
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  serviceName: dsmr-reader-postgresql-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: dsmr-reader
      app.kubernetes.io/component: database
      app.kubernetes.io/instance: production
      app.kubernetes.io/part-of: dsmr-reader
  template:
    metadata:
      name: dsmr-reader-postgresql
      labels:
        app.kubernetes.io/name: dsmr-reader
        app.kubernetes.io/component: database
        app.kubernetes.io/instance: production
        app.kubernetes.io/part-of: dsmr-reader
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 1000
      containers:
        - name: postgresql
          image: "bitnami/postgresql:14.2.0-debian-10-r77"
          securityContext:
            runAsUser: 1000
          ports:
            - containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U ${POSTGRESQL_USERNAME} -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U ${POSTGRESQL_USERNAME} -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        storageClassName: freenas-iscsi-manual-csi
        resources:
          requests:
            storage: "10Gi"

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dsmr-reader
  namespace: home-automation
  labels:
    app.kubernetes.io/name: dsmr-reader
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: dsmr-reader
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dsmr-reader
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: production
      app.kubernetes.io/part-of: dsmr-reader
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dsmr-reader
        app.kubernetes.io/component: server
        app.kubernetes.io/instance: production
        app.kubernetes.io/part-of: dsmr-reader
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: dsmr-reader
          image: "xirixiz/dsmr-reader-docker:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: backups
              mountPath: /app/backups
          resources: {}
      volumes:
        - name: backups
          persistentVolumeClaim:
            claimName: pvc-nfs-dsmr-reader-backups

---
kind: Service
apiVersion: v1
metadata:
  name: dsmr-reader-postgresql-hl
  namespace: home-automation
  labels:
    app.kubernetes.io/name: dsmr-reader
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: dsmr-reader
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  selector:
    app.kubernetes.io/name: dsmr-reader
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: dsmr-reader
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432

---
kind: Service
apiVersion: v1
metadata:
  name: dsmr-reader
  namespace: home-automation
  labels:
    app.kubernetes.io/name: dsmr-reader
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: dsmr-reader
spec:
  selector:
    app.kubernetes.io/name: dsmr-reader
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: dsmr-reader
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dsmr-reader
  namespace: home-automation
  labels:
    app.kubernetes.io/name: dsmr-reader
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: dsmr-reader
spec:
  ingressClassName: nginx-private
  rules:
    - host: dsmr-reader.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: dsmr-reader
                port:
                  name: http
  tls:
    - hosts:
        - dsmr-reader.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl
